crates/pg_syntax/tests/snapshots/postgres_regress/fast_default@43.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT pk, c_int, c_bpchar, c_text, c_date, c_timestamp,\n       c_timestamp_null, c_array, c_small, c_small_null,\n       c_big, c_num, c_time, c_interval,\n       c_hugetext = repeat('abcdefg',1000) as c_hugetext_origdef,\n       c_hugetext = repeat('poiuyt', 1000) as c_hugetext_newdef\nFROM T ORDER BY pk;"
---
SelectStmt@0..304
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..9
    ColumnRef@7..9
      Ident@7..9 "pk"
  Ascii44@9..10 ","
  Whitespace@10..11 " "
  ResTarget@11..16
    ColumnRef@11..16
      Ident@11..16 "c_int"
  Ascii44@16..17 ","
  Whitespace@17..18 " "
  ResTarget@18..26
    ColumnRef@18..26
      Ident@18..26 "c_bpchar"
  Ascii44@26..27 ","
  Whitespace@27..28 " "
  ResTarget@28..34
    ColumnRef@28..34
      Ident@28..34 "c_text"
  Ascii44@34..35 ","
  Whitespace@35..36 " "
  ResTarget@36..42
    ColumnRef@36..42
      Ident@36..42 "c_date"
  Ascii44@42..43 ","
  Whitespace@43..44 " "
  ResTarget@44..55
    ColumnRef@44..55
      Ident@44..55 "c_timestamp"
  Ascii44@55..56 ","
  Newline@56..57 "\n"
  Whitespace@57..64 "       "
  ResTarget@64..80
    ColumnRef@64..80
      Ident@64..80 "c_timestamp_null"
  Ascii44@80..81 ","
  Whitespace@81..82 " "
  ResTarget@82..89
    ColumnRef@82..89
      Ident@82..89 "c_array"
  Ascii44@89..90 ","
  Whitespace@90..91 " "
  ResTarget@91..98
    ColumnRef@91..98
      Ident@91..98 "c_small"
  Ascii44@98..99 ","
  Whitespace@99..100 " "
  ResTarget@100..112
    ColumnRef@100..112
      Ident@100..112 "c_small_null"
  Ascii44@112..113 ","
  Newline@113..114 "\n"
  Whitespace@114..121 "       "
  ResTarget@121..126
    ColumnRef@121..126
      Ident@121..126 "c_big"
  Ascii44@126..127 ","
  Whitespace@127..128 " "
  ResTarget@128..133
    ColumnRef@128..133
      Ident@128..133 "c_num"
  Ascii44@133..134 ","
  Whitespace@134..135 " "
  ResTarget@135..141
    ColumnRef@135..141
      Ident@135..141 "c_time"
  Ascii44@141..142 ","
  Whitespace@142..143 " "
  ResTarget@143..153
    ColumnRef@143..153
      Ident@143..153 "c_interval"
  Ascii44@153..154 ","
  Newline@154..155 "\n"
  Whitespace@155..162 "       "
  ResTarget@162..219
    AExpr@162..196
      ColumnRef@162..172
        Ident@162..172 "c_hugetext"
      Whitespace@172..173 " "
      Ascii61@173..174 "="
      Whitespace@174..175 " "
      FuncCall@175..196
        Ident@175..181 "repeat"
        Ascii40@181..182 "("
        AConst@182..191
          Sconst@182..191 "'abcdefg'"
        Ascii44@191..192 ","
        AConst@192..196
          Iconst@192..196 "1000"
    Ascii41@196..197 ")"
    Whitespace@197..198 " "
    As@198..200 "as"
    Whitespace@200..201 " "
    Ident@201..219 "c_hugetext_origdef"
  Ascii44@219..220 ","
  Newline@220..221 "\n"
  Whitespace@221..228 "       "
  ResTarget@228..284
    AExpr@228..262
      ColumnRef@228..238
        Ident@228..238 "c_hugetext"
      Whitespace@238..239 " "
      Ascii61@239..240 "="
      Whitespace@240..241 " "
      FuncCall@241..262
        Ident@241..247 "repeat"
        Ascii40@247..248 "("
        AConst@248..256
          Sconst@248..256 "'poiuyt'"
        Ascii44@256..257 ","
        Whitespace@257..258 " "
        AConst@258..262
          Iconst@258..262 "1000"
    Ascii41@262..263 ")"
    Whitespace@263..264 " "
    As@264..266 "as"
    Whitespace@266..267 " "
    Ident@267..284 "c_hugetext_newdef"
  Newline@284..285 "\n"
  From@285..289 "FROM"
  Whitespace@289..290 " "
  RangeVar@290..291
    Ident@290..291 "T"
  Whitespace@291..292 " "
  SortBy@292..303
    Order@292..297 "ORDER"
    Whitespace@297..298 " "
    By@298..300 "BY"
    Whitespace@300..301 " "
    ColumnRef@301..303
      Ident@301..303 "pk"
  Ascii59@303..304 ";"

