crates/pg_syntax/tests/snapshots/postgres_regress/fast_default@44.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT comp();
---
SelectStmt@0..14
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..11
    FuncCall@7..11
      Ident@7..11 "comp"
  Ascii40@11..12 "("
  Ascii41@12..13 ")"
  Ascii59@13..14 ";"

