crates/pg_syntax/tests/snapshots/postgres_regress/fast_default@48.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT set('t');"
---
SelectStmt@0..16
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..14
    FuncCall@7..14
      Set@7..10 "set"
      Ascii40@10..11 "("
      AConst@11..14
        Sconst@11..14 "'t'"
  Ascii41@14..15 ")"
  Ascii59@15..16 ";"

