crates/pg_syntax/tests/snapshots/postgres_regress/fast_default@6.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE FUNCTION comp() RETURNS TEXT\nAS $$\nBEGIN\n  RETURN (SELECT CASE\n               WHEN m.id = c.relfilenode THEN 'Unchanged'\n               ELSE 'Rewritten'\n               END\n           FROM m, pg_class AS c, pg_namespace AS s\n           WHERE c.relname = 't'\n               AND c.relnamespace = s.oid\n               AND s.nspname = 'fast_default');\nEND;\n$$ LANGUAGE 'plpgsql';"
---
CreateFunctionStmt@0..381
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Function@7..15 "FUNCTION"
  Whitespace@15..16 " "
  Ident@16..20 "comp"
  Ascii40@20..21 "("
  Ascii41@21..22 ")"
  Whitespace@22..23 " "
  Returns@23..30 "RETURNS"
  Whitespace@30..31 " "
  TypeName@31..35
    TextP@31..35 "TEXT"
  Newline@35..36 "\n"
  DefElem@36..361
    As@36..38 "AS"
    Whitespace@38..39 " "
    List@39..361
      Sconst@39..361 "$$\nBEGIN\n  RETURN (SE ..."
  Whitespace@361..362 " "
  DefElem@362..380
    Language@362..370 "LANGUAGE"
    Whitespace@370..371 " "
    Sconst@371..380 "'plpgsql'"
  Ascii59@380..381 ";"

